--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
         <h2>Verificar Cedula</h2>
         <p>A continuacion ingrese el numero de cedula a consultar y pulse buscar</p>
-        <form class="form-inline" action="http://127.0.0.1:8000/api/verificar_cc"  method="post" id="cedulaForm">
+        <form class="form-inline" action="http://68.183.23.227/api/verificar_cc"  method="post" id="cedulaForm">
             <label class="sr-only" for="inlineFormInputName2">Cedula</label>
             <input type="text" class="form-control mb-2 mr-sm-2" id="documento" name="documento" placeholder="Numero de Cedula">
             <button type="submit" class="btn btn-primary mb-2">Verificar</button>
@@ -120,10 +120,11 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
         <h2>Verificar NIT</h2>
         <p>Ingrese el NIT de la empresa que desea consultar y presione verificar</p>
-        <form class="form-inline">
+        <form class="form-inline" action="http://68.183.23.227/api/verificar_nit" method="post" id="nitForm">
             <label class="sr-only" for="inlineFormInputName2">Cedula</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="nit" placeholder="NIT">
+            <input type="text" class="form-control mb-2 mr-sm-2" id="nit" name="nit" placeholder="NIT">
             <button type="submit" class="btn btn-primary mb-2">Verificar</button>
+            <div class="form-msg-nit"></div>
         </form>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
